# funny_set_exploration

./: .gitignore  CHANGELOG.md  CLI_USAGE.md  Cargo.toml  DOCS.md  OPTIMIZATION_OPTIONS.md  PATH_CONFIGURATION.md  README.md  RKYV_MIGRATION.md  STACK_OPTIMIZATION.md  funny.rs  log_funny_2025-12-17_01-17-33.txt  log_funny_2025-12-17_01-25-30.txt  log_funny_2025-12-17_01-36-05.txt  log_funny_2025-12-17_01-43-25.txt  log_funny_2025-12-17_01-52-32.txt  log_funny_2025-12-17_01-52-38.txt  log_funny_2025-12-17_02-02-20.txt  log_funny_2025-12-17_02-06-17.txt  test_compact.rs
documentation/: CLI_USAGE.md  DOCS.md  OPTIMIZATION_OPTIONS.md  PATH_CONFIGURATION.md  REFACTOR_SUMMARY.md  RKYV_COMPLETE.md  RKYV_IMPLEMENTATION.md  RKYV_MIGRATION.md  STACK_OPTIMIZATION.md  TECHNICAL.md  VEC_RETURN_ANALYSIS.md
examples/: compare_implementations.rs  path_examples.rs
scripts/: build_release_and_copy.ps1
src/: compaction.rs  file_info.rs  filenames.rs  io_helpers.rs  is_set.rs  list_of_nlists.rs  list_of_nsl.rs  list_of_nsl_hybrid.rs  main.rs  main_v0.2.2.rs  main_v0.3.0.rs  n-list.rs  n_list.rs  nlist.rs  no_set_list.rs  set.rs  utils.rs
