[package]
name = "funny_set_exploration"
version = "0.2.1"
edition = "2024"

[dependencies]
# Rkyv for zero-copy serialization
rkyv = { version = "0.7", features = ["validation", "size_32"] }

# Memory-mapped file support
memmap2 = "0.9"

# Keep serde and bincode for backward compatibility during migration
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Utility dependencies
separator = "0.4"
