[package]
name = "funny_set_exploration"
version = "0.2.2"
edition = "2024"

[dependencies]
# Rkyv for zero-copy serialization (size_64 for archives > 4GB)
rkyv = { version = "0.7", features = ["validation", "size_64"] }

# Memory-mapped file support
memmap2 = "0.9"

# Keep serde and bincode for backward compatibility during migration
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Utility dependencies
separator = "0.4"
