[package]
name = "funny"
version = "0.4.8"
edition = "2024"

[dependencies]
# Rkyv for zero-copy serialization (size_32 for files < 4GB)
rkyv = { version = "0.7", default-features = false, features = ["std", "validation", "size_32"] }

# Memory-mapped file support
memmap2 = "0.9"

# Keep serde and bincode for backward compatibility during migration
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Date/time for log file naming
chrono = "0.4"

# Utility dependencies
separator = "0.4"
wildmatch = "2.1"
